# uotan_riscv_emu-ng

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/sv39-test/: Makefile  link.ld  main.c  start.S
include/: emulator.hpp  execution_engine.hpp  executionengine.hpp
include/common/: bit.hpp  float.hpp  types.hpp
include/core/: bus.hpp  decoder.hpp  dram.hpp  execute.hpp  hart.hpp  mmu.hpp
include/device/: bcm2835_rng.hpp  clint.hpp  device.hpp  goldfish_battery.hpp  goldfish_events.hpp  goldfish_rtc.hpp  nemu_console.hpp  ns16550.hpp  pflash_cfi01.hpp  plic.hpp  sifive_test.hpp  simple_fb.hpp  test_intr_gen.hpp  virtio_blk.hpp
include/host/: console.hpp
include/host/ui/: backend.hpp  gui_backend.hpp  headless_backend.hpp
include/ui/: byte_sink.hpp  byte_source.hpp  console_endpoint.hpp  gtk4_backend.hpp  headless_backend.hpp  host_console.hpp  input_sink.hpp  pixel_source.hpp  sdl3_backend.hpp  sfml3_backend.hpp  terminal.hpp  ui_backend.hpp
include/utils/: elfloader.hpp  fileloader.hpp
misc/: uemu.dts  uemu_defconfig
src/: emulator.cpp  execution_engine.cpp  executionengine.cpp  main.cpp
src/common/: float.cpp
src/core/: decoder.cpp  execute.cpp  execution_engine.cpp  hart.cpp
src/core/local-include/: insn_exec_macros.hpp
src/device/: bcm2835_rng.cpp  clint.cpp  goldfish_battery.cpp  goldfish_events.cpp  goldfish_rtc.cpp  nemu_console.cpp  ns16550.cpp  pflash_cfi01.cpp  plic.cpp  sifive_test.cpp  simple_fb.cpp  test_intr_gen.cpp  virtio_blk.cpp
src/host/ui/: gui_backend.cpp
src/ui/: gtk4_backend.cpp  sdl3_backend.cpp  sfml3_backend.cpp  ui_backend.cpp  uotan_icon.S.in
src/ui/local-include/: uotan_rgba.hpp
src/utils/: elfloader.cpp
tests/: CMakeLists.txt
tests/isa/: test_custom.cpp  test_riscv-test.cpp
tests/unit/common/: test_bit.cpp
tests/unit/core/: test_bus.cpp  test_dram.cpp  test_hart.cpp
tests/unit/device/: test_clint.cpp  test_device.cpp  test_nemu_console.cpp  test_ns16550.cpp  test_simple_fb.cpp
